--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,17 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the requirements.txt file into the container at /app
+COPY requirements.txt /app/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Set the NODE_OPTIONS environment variable to use legacy OpenSSL providers
-ENV NODE_OPTIONS=--openssl-legacy-provider
+# Copy the rest of the application code into the container at /app
+COPY . /app
 
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
+# Make port 80 available to the world outside this container
+EXPOSE 80
 
 # Define environment variable
 ENV NAME World
