--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,9 +16,6 @@ COPY . /app
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
 
-# Define environment variable
-ENV FLASK_APP=app.py
-
-# Run app.py when the container launches
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+# Run the Flask application using Gunicorn
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
 
