--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.10
+FROM python:3.9-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -17,5 +17,4 @@ COPY . /app
 EXPOSE 5000
 
 # Run the Flask application using Gunicorn
-CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
-
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "wsgi:app"]
